fix get list quiz record response